--- a/notifications/build.gradle
+++ b/notifications/build.gradle
@@ -65,3 +65,9 @@ dependencies {
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.8.0'
     testImplementation project(path: ':core', configuration: 'testRuntime')
 }
+
+afterEvaluate {
+    if (rootProject.hasProperty("afterConfigurate")) {
+        rootProject."afterConfigurate"(project)
+    }
+}
