--- a/visualtracking/build.gradle
+++ b/visualtracking/build.gradle
@@ -36,7 +36,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation project(path: ':core')
+    api project(path: ':core')
     //noinspection GradleDependency
     compileOnly 'androidx.core:core-ktx:1.2.0'
     //noinspection GradleCompatible
