--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = '1.6.21'
     repositories {
         jcenter()
         google()
@@ -33,7 +33,14 @@ dependencies {
     implementation gradleApi()
     implementation 'org.javassist:javassist:3.24.1-GA'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compileOnly 'com.android.tools.build:gradle:4.1.0'
+    compileOnly 'com.android.tools.build:gradle:7.0.0'
+
+    implementation 'org.ow2.asm:asm-util:7.0'
+    implementation 'org.ow2.asm:asm-commons:7.0'
+
+    // WORKAROUND https://issuetracker.google.com/issues/180889192
+    compileOnly "com.android.tools:common:30.0.0-alpha08"
+    compileOnly 'commons-io:commons-io:2.11.0'
 }
 
 println "configure plugin: $project.name"
