--- a/buildscripts/encrypted.properties
+++ b/buildscripts/encrypted.properties
@@ -1,1 +1,1 @@
-Salted__Å†Ë\ò~Ë#ç¸çSÙRó˜¿Xz8rÜè‡·‚¸JŸ‰ÿ:†G¼X§ÝVûž¨X¶ï8ßaË£Ð×Šrá+ûÓ3"ûMPd½àÕŒÆWP¡=µus+âÃa>iˆ1Æ©|·‹U1 œòty©’˜eÓôàxÿö<ÏWæ³²ÕB;ïYm¤&õY@¹à›êëÄ¤éžW;k¥Â1ð£Èþ—œËs~Þš9O’r8Ømò°Éè'
+Salted__]áŸ@šßVâê¶zExúÐƒ9XäùöN¹Ìë±±U(iô(¥/ØM"Ò3sÐ.I.ÞAàè wâ×_”±Z¢Ò3}U=RÓŠ7^ÂïO¾¼ÞþZE¿1ÜP­Ýõë{piW¥|ZÍk—VW¸üÆÞöèd@n¯UsEäàd]Î	ÅÅV*µÂ²—°Ò{¢¸–D.™°„aUÇé™ÅÞèÞ¡Û¦Qr¯Ÿ„2)"·^˜uq
