--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.20"
 
@@ -23,11 +23,12 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 }
 
-configure(subprojects.findAll { !it.name.startsWith("sample_") }) {
+configure(subprojects.findAll { !it.name.startsWith("sample_") && !it.name.startsWith("test") }) {
     println "configure libraries: ${project.name}"
 
     apply from: '../buildscripts/projectDokka.gradle'
