--- a/notifications/build.gradle
+++ b/notifications/build.gradle
@@ -4,13 +4,13 @@ apply plugin: 'kotlin-android'
 def fcmCompileVersion = "20.3.0"
 
 android {
-    compileSdkVersion 29
+    namespace 'io.karte.android.notifications'
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 16
         //noinspection OldTargetApi
-        targetSdkVersion 29
-        versionName version
+        targetSdkVersion 31
         buildConfigField "String", "LIB_VERSION", "\"$version\""
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -23,16 +23,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     testOptions {
         unitTests {
             includeAndroidResources = true
         }
     }
-    lintOptions {
-        warningsAsErrors true
-        lintConfig file('../lint.xml')
-    }
     kotlinOptions.allWarningsAsErrors = true
+    lint {
+        lintConfig file('../lint.xml')
+        warningsAsErrors true
+    }
 
     libraryVariants.all { variant ->
         variant.getRuntimeConfiguration().resolutionStrategy { strategy ->
@@ -58,12 +59,12 @@ dependencies {
     testImplementation "com.google.firebase:firebase-messaging:$fcmCompileVersion"
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
-    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'androidx.test:core:1.4.0'
     testImplementation "com.google.truth:truth:1.0.1"
     testImplementation "io.mockk:mockk:1.10.0"
     testImplementation "org.robolectric:robolectric:4.8"
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.8.0'
-    testImplementation project(path: ':core', configuration: 'testRuntime')
+    testImplementation project(':test_lib')
 }
 
 afterEvaluate {
