--- a/notifications/src/main/AndroidManifest.xml
+++ b/notifications/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.karte.android.notifications">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <queries>
         <intent>
@@ -14,6 +13,6 @@
 
     <application>
         <receiver android:name="io.karte.android.notifications.MessageReceiver" />
-        <activity android:name=".MessageReceiveActivity" />
+        <activity android:name="io.karte.android.notifications.MessageReceiveActivity" />
     </application>
 </manifest>
