--- a/visualtracking/build.gradle
+++ b/visualtracking/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 29
+    namespace 'io.karte.android.visualtracking'
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 16
         //noinspection OldTargetApi
-        targetSdkVersion 29
-        versionName version
+        targetSdkVersion 31
         buildConfigField "String", "LIB_VERSION", "\"$version\""
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -21,16 +21,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     testOptions {
         unitTests {
             includeAndroidResources = true
         }
     }
-    lintOptions {
-        warningsAsErrors true
-        lintConfig file('../lint.xml')
-    }
     kotlinOptions.allWarningsAsErrors = true
+    lint {
+        lintConfig file('../lint.xml')
+        warningsAsErrors true
+    }
 }
 
 dependencies {
@@ -42,13 +43,14 @@ dependencies {
     //noinspection GradleCompatible
     compileOnly "com.android.support:design:22.0.0"
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'androidx.test:core:1.3.0'
+    // 1.5.0はなぜかkotlin-stdlibに依存している(core-ktxじゃないのに)ため、上げられない
+    testImplementation 'androidx.test:core:1.4.0'
     testImplementation "com.google.truth:truth:1.0.1"
     testImplementation "io.mockk:mockk:1.10.0"
     testImplementation "org.robolectric:robolectric:4.8"
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.8.0'
     testImplementation "net.javacrumbs.json-unit:json-unit-assertj:2.6.1"
-    testImplementation project(path: ':core', configuration: 'testRuntime')
+    testImplementation project(':test_lib')
 }
 
 afterEvaluate {
