--- a/examples/sample_kotlin/build.gradle
+++ b/examples/sample_kotlin/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.3'
