--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':core', ':inappmessaging', ':notifications', ':variables', ':visualtracking'
+include ':core', ':inappmessaging', ':notifications', ':variables', ':visualtracking', ':inbox'
 include ':sample_java', ':sample_kotlin', ':test_lib'
 rootProject.name='Karte'
 includeBuild('gradle-plugin') {
