--- a/examples/sample_kotlin/build.gradle
+++ b/examples/sample_kotlin/build.gradle
@@ -15,7 +15,6 @@ apply plugin: 'io.karte.android'
 android {
     compileSdkVersion 31
 
-
     defaultConfig {
         applicationId "io.karte.tracker_sample"
         minSdkVersion 21
@@ -32,12 +31,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
@@ -46,6 +45,7 @@ dependencies {
     implementation project(':notifications')
     implementation project(':variables')
     implementation project(':visualtracking')
+    implementation project(':inbox')
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
