--- a/core/test_lib/build.gradle
+++ b/core/test_lib/build.gradle
@@ -10,6 +10,7 @@ android {
     defaultConfig {
         minSdk 16
         targetSdk 31
+        multiDexEnabled true
     }
     lintOptions {
         abortOnError false
@@ -23,4 +24,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:mockwebserver:4.8.0'
     implementation "com.google.truth:truth:1.0.1"
     implementation "org.robolectric:robolectric:4.8"
+    implementation("org.objenesis:objenesis:3.2") { force = true }
 }
