Use pluginManagement dependencies (#254)
* id 'com.android.application' version '7.0.4' apply false

* id 'org.jetbrains.kotlin.android' version '1.7.20' apply false

* id 'org.jetbrains.dokka' version '1.4.20'

* id 'io.codearte.nexus-staging' version '0.22.0'

* id "com.github.dcendents.android-maven" version "2.1" apply false

* Clean

* Fix: OVERRIDE_DEPRECATION warnings

* Update jacoco.toolVersion from 0.8.5 to 0.8.7 to fix "Unexpected SMAP line: *S KotlinDebug"

* Follow jacoco.toolVersion

* refactor build settings

* Use plugins block

* kotlin-android to org.jetbrains.kotlin.android

---------

Co-authored-by: Sojiro Nishimura <sojiro.nishimura@MacBook-Pro-105.local>

--- a/examples/sample_kotlin/build.gradle
+++ b/examples/sample_kotlin/build.gradle
@@ -1,16 +1,10 @@
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.google.gms:google-services:4.3.3'
-    }
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android-extensions'
+    id 'io.karte.android'
+    id 'com.google.gms.google-services'
 }
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'io.karte.android'
 
 android {
     compileSdkVersion 31
@@ -53,4 +47,3 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
-apply plugin: 'com.google.gms.google-services'
