--- a/build.gradle
+++ b/build.gradle
@@ -3,38 +3,28 @@
 buildscript {
     ext.kotlin_version = '1.4.32'
     ext.coroutine_version = '1.4.3'
-    repositories {
-        google()
-        mavenCentral()
-    }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.20"
-
-        // for upload maven repo
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.22.0"
-
         // for apply karte plugin to example project
         classpath 'io.karte.android:local-gradle-plugin'
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
 plugins {
+    id 'com.android.application' version '7.0.4' apply false
+    id 'com.android.library' version '7.0.4' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'org.jetbrains.dokka' version '1.4.20'
+
+    // for upload maven repo
+    id "com.github.dcendents.android-maven" version "2.1" apply false
+    id 'io.codearte.nexus-staging' version '0.22.0'
+
     id 'org.jetbrains.kotlinx.binary-compatibility-validator' version '0.13.2'
 }
 
 apiValidation {
     ignoredProjects += ["test_lib", "sample_kotlin", "sample_java"]
-}
-
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        jcenter()
-    }
 }
 
 configure(subprojects.findAll { !it.name.startsWith("sample_") && !it.name.startsWith("test") }) {
