--- a/examples/sample_java/build.gradle
+++ b/examples/sample_java/build.gradle
@@ -1,14 +1,8 @@
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.google.gms:google-services:4.3.3'
-    }
+plugins {
+    id 'com.android.application'
+    id 'io.karte.android'
+    id 'com.google.gms.google-services'
 }
-apply plugin: 'com.android.application'
-apply plugin: 'io.karte.android'
 
 android {
     compileSdkVersion 31
@@ -49,4 +43,3 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
-apply plugin: 'com.google.gms.google-services'
