--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,20 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
 include ':core', ':inappmessaging', ':notifications', ':variables', ':visualtracking', ':inbox'
 include ':sample_java', ':sample_kotlin', ':test_lib'
 rootProject.name='Karte'
