--- a/.github/workflows/uitest-on-develop.yml
+++ b/.github/workflows/uitest-on-develop.yml
@@ -1,4 +1,4 @@
-name: "UI Test"
+name: "UI Test on develop"
 on:
   push:
     branches:
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ vars.UITEST_REPO }}
     steps:
-      - uses: actions/github-script@v6
+      - uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.SHARED_GITHUB_ACCESS_TOKEN }}
           script: |
@@ -21,5 +21,6 @@ jobs:
               inputs: {
                 slackChannel: '${{vars.SLACK_CHANNEL}}',
                 notifyOnlyFail: true,
+                minimumOnly: true,
               },
             })
