--- a/buildscripts/projectJacoco.gradle
+++ b/buildscripts/projectJacoco.gradle
@@ -15,8 +15,8 @@ task jacocoTestReport(
         group: "verification"
 ) {
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
     getSourceDirectories().from = "${projectDir}/src/main/java"
     getClassDirectories().from = files(
