--- a/visualtracking/build.gradle
+++ b/visualtracking/build.gradle
@@ -7,6 +7,10 @@ android {
     namespace 'io.karte.android.visualtracking'
     compileSdkVersion 31
 
+    buildFeatures {
+        buildConfig true
+    }
+
     defaultConfig {
         minSdkVersion 16
         //noinspection OldTargetApi
@@ -15,6 +19,15 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'proguard-rules.pro'
+    }
+
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 
     buildTypes {
