--- a/buildscripts/projectMavenPlugin.gradle
+++ b/buildscripts/projectMavenPlugin.gradle
@@ -1,9 +1,9 @@
 task sourcesJar(type: Jar) {
-    classifier = "sources"
+    archiveClassifier.set("sources")
     from sourceSets.main.java.srcDirs
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier.set("javadoc")
     from javadoc.destinationDir
 }
