--- a/buildscripts/ktlint.gradle
+++ b/buildscripts/ktlint.gradle
@@ -24,5 +24,5 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
     main = "com.pinterest.ktlint.Main"
-    args "-F", "**/src/**/*.kt --editorconfig=.editorconfig"
+    args "-F", "**/src/**/*.kt", "--editorconfig=.editorconfig"
 }
