--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,13 @@ version: 2.1
 orbs:
   android: circleci/android@2.2.0
 
+executors:
+  test-executor:
+    machine:
+      image: android:2024.01.1
+    resource_class: large
+
+
 commands:
   add_google_services:
     steps:
@@ -56,11 +63,9 @@ commands:
 
 jobs:
   test:
-    docker:
-      - image: cimg/android:2023.03.1
-        environment:
-          GRADLE_OPTS: -Xmx6G
-    resource_class: large
+    executor: test-executor
+    environment:
+      GRADLE_OPTS: -Xmx6G
     steps:
       - checkout
       - add_google_services
@@ -89,7 +94,7 @@ jobs:
   publish_docs:
     executor:
       name: android/android-machine
-      tag: 2023.02.1
+      tag: 2024.01.1
     steps:
       - checkout
       - android/restore-gradle-cache
@@ -107,7 +112,7 @@ jobs:
   publish:
     executor:
       name: android/android-machine
-      tag: 2023.02.1
+      tag: 2024.01.1
     steps:
       - checkout
       - android/restore-gradle-cache
