Fix/kotlin 1.8.10 and view compat (#467)
* kotlinのバージョンを1.8.10に上げた

* android extensionをdatabindingで置き換え

* ビルドエラーを修正

* - coroutineをkotlinに合わせてバージョンアップ
- targetSDKを34に変更

* gradle-pluginのbuild.gradelにcoroutine_versionを追加

* API 33 以降で非推奨になった setForceDark に対し @Suppress("DEPRECATION") を追加

* add @SuppressLint("DiscouragedApi")

* noinspection OldTargetApi

* <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />

* fix lint  (Unexpected blank line(s) before "}")

* update robolectric

* make build karte sample app

* Revert "make build karte sample app"

This reverts commit d1e71ccbde3f3ba68c607a67dce03ce256e8981b.

* fix Cannot get non-null extra property 'coroutine_version' as it does not exist

* remove unnecessary line

* use isBroadcast and isActivity

* fix

* fix

---------

Co-authored-by: Kota Fujiwara <kota.fujiwara@MacBook-Pro.local>
Co-authored-by: Hajime Nakamura <5644420+nkmrh@users.noreply.github.com>

--- a/examples/sample_java/src/main/AndroidManifest.xml
+++ b/examples/sample_java/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.karte.sample_java">
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".SampleApp"
