--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlin_version = '1.8.0'
+        kotlin_version = '1.8.10'
         ossrhUsername = System.getenv().getOrDefault("MAVEN_USER_NAME", "")
         ossrhPassword = System.getenv().getOrDefault("MAVEN_PASSWORD", "")
     }
@@ -35,7 +35,7 @@ compileKotlin {
 dependencies {
     implementation gradleApi()
     implementation 'org.javassist:javassist:3.24.1-GA'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
     compileOnly 'com.android.tools.build:gradle:7.0.0'
 
     implementation 'org.ow2.asm:asm-util:7.0'
