Androidイベントビューワー (#299)
* ad event viewer

* add latest changes(ちゃんと動くかわからん)

* add missing file

* add missing file

* fix

* fix

* fix lint

* fix

* fix

* add readme

* fix

* update eventviewer.api

* fix

* update api

* remove unnecessary diff

* fix

* fix

* fix

* イベントビューワーSDKをsettings.gradle.ktsに追加

* fix

* fix

* fix

* fix

* fix

* fix

* fix

* fix optout

* fix

* fix lint

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -18,6 +18,9 @@
 'Module:Inbox':
   - inbox/*
   - inbox/src/main/**
+'Module:EventgViewer':
+  - debugger/*
+  - debugger/src/main/**
 'Module:InAppFrame':
   - inappframe/*
   - inappframe/src/main/**
@@ -28,6 +31,7 @@
   - variables/src/test/**
   - visualtracking/src/test/**
   - inbox/src/test/**
+  - debugger/src/test/**
 'Examples':
   - examples/**
 'Gradle-Plugin':
