--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -18,7 +18,7 @@
 'Module:Inbox':
   - inbox/*
   - inbox/src/main/**
-'Module:EventgViewer':
+'Module:EventViewer':
   - debugger/*
   - debugger/src/main/**
 'Module:InAppFrame':
