クライアント環境でIAMのCarouselがランタイムエラーする問題の修正  (#486)
* fix

* fix

* add obsoleteLintCustomCheck

* update changelog

* fix

* fix

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -18,7 +18,7 @@
 'Module:Inbox':
   - inbox/*
   - inbox/src/main/**
-'Module:EventViewer':
+'Module:Debugger':
   - debugger/*
   - debugger/src/main/**
 'Module:InAppFrame':
